# njit-wrappers

./: 404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  proposal.md  pyproject.toml  setup.py  sitemap.xml
.claude/commands/: check.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
benchmarks/: OVERHEAD_EXPERIMENTS.md  README.md  REDISPATCH_RESULTS.md  additional_experiments.py  bench_cpu_overhead.py  overhead_experiments.py  quick_additional.py
benchmarks/call-overhead-breakdown/: README.md  run.py
benchmarks/eager-vs-njit/: README.md  results.txt  run.py
benchmarks/inductor-vs-njit/: README.md  run.py
benchmarks/triton-vs-njit/: README.md  run.py
docs/: combined-example.md  index.md  inductor.md  torch-ops.md  triton.md
search/: search_index.json
src/njit_wrappers/: __init__.py  _inductor.py  _inductor_extract.py  _tensor.py  _triton.py  hello.py
src/njit_wrappers/csrc/: _bridge.cpp
tests/: test_hello.py  test_inductor.py  test_tensor.py  test_triton.py
