[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "njit-wrappers"
version = "0.1.0"
description = "Hello world Python package"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "njit-wrappers contributors" }]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/zasdfgbnm/njit-wrappers"
Repository = "https://github.com/zasdfgbnm/njit-wrappers"
Issues = "https://github.com/zasdfgbnm/njit-wrappers/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pyright>=1.1",
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/njit_wrappers"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["njit_wrappers"]

# ── Pyright ───────────────────────────────────────────────────────────────────
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
