[build-system]
requires = ["setuptools>=68", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "njit-wrappers"
version = "0.1.0"
description = "torch.Tensor support inside numba.njit"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "njit-wrappers contributors" }]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch",
    "numba",
]

[project.urls]
Homepage = "https://github.com/zasdfgbnm/njit-wrappers"
Repository = "https://github.com/zasdfgbnm/njit-wrappers"
Issues = "https://github.com/zasdfgbnm/njit-wrappers/issues"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-markdown-docs>=0.9.2",
    "pyright>=1.1.409",
    "ruff>=0.15.12",
    "mkdocs-material>=9.7.6",
]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["njit_wrappers"]

# ── Pyright ───────────────────────────────────────────────────────────────────
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src"]
# _tensor.py, _triton.py, _inductor.py, and _inductor_extract.py use numba/triton/ast
# internal APIs that ship no type stubs or have complex dynamic types
ignore = [
    "src/njit_wrappers/_tensor.py",
    "src/njit_wrappers/_triton.py",
    "src/njit_wrappers/_inductor.py",
    "src/njit_wrappers/_inductor_extract.py",
]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
